# CV_building_app

./: .env  .env.example  README.md  app.py  pyproject.toml  streamlit_ui.py  tailored_resume.md  test.py  utils.py
db/: chroma.sqlite3
functions/: 1.md  agents.py  fake_job.md  fake_resume.md
