[tool.poetry]
name = "cv-building-app"
version = "0.1.0"
description = "A full streamlit app takes in job posted link and content from you and will generate a proper CV content."
authors = ["Ashhar <syed.muhammad.ashhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
crewai = "0.28.8"
streamlit = "^1.37.1"
groq = "^0.9.0"
langchain-groq = "^0.1.9"
crewai_tools = "0.1.6"
langchain_community = "0.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
